force-app/main/default/objects/Order__c/fields/Payment_Method__c.field-meta.xml
<CustomField>

    
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Cash on Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>