force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>

    
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <type>Currency</type>
        <scale>2</scale>
        <precision>18</precision>
    
</CustomField>